--- a/notebooks/tomogram_2D_segmentation.ipynb
+++ b/notebooks/tomogram_2D_segmentation.ipynb
@@ -3,13 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
+    "import urllib\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
@@ -20,11 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from models import double_decoder_cnn\n",
@@ -34,11 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Checking TensorFlow installation and GPU access"
    ]
@@ -46,11 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -61,11 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Building the deep network\n",
     "\n",
@@ -75,11 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('../saved_models/model_config_semisupervised_2021_05.json', 'r') as config_file:\n",
@@ -88,11 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "The ```model``` object contains the deep network used for image segmentaion. "
    ]
@@ -101,10 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -117,23 +88,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Weights of the pre-trained model are loaded from the ```HDF5``` file with the given path."
+    "### Loading weights of the pre-trained model\n",
+    "\n",
+    "\n",
+    "The weights are saved as ```HDF5``` files. A specific set of weights will be downloaded when you first run the following cell."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not glob.glob(\"../saved_models/*.h5\"):\n",
+    "    print(\"Downloading network weights...\")\n",
+    "    urllib.request.urlretrieve('ftp://ftp.mi.fu-berlin.de/pub/cmb-data/deep_sxt/weights_semisupervised_2021_05.h5',\n",
+    "                       '../saved_models/weights_semisupervised_2021_05.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.load_weights('../saved_models/weights_semisupervised_2021_05.h5')"
@@ -141,11 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Preparing tomogram for processing\n",
     "\n",
@@ -155,11 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tomogram_file_path = \"path_to_your_tomogram_file\""
@@ -168,11 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tomogram = load_tomogram_from_file(tomogram_file_path)"
@@ -180,11 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Hint:\n",
     "you might want to slice the tomogram to remove uninteresting slices before processing by the network.\n",
@@ -195,11 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "start_index = 0\n",
@@ -232,11 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Feeding the tomogram to the segmentation network\n",
     "\n",
@@ -248,11 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "segmented_tomogram = []\n",
@@ -272,11 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure (figsize = (10 * n_sample_slices, 20))\n",
@@ -300,11 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Saving the segmented tomogram to file\n",
     "\n",
@@ -314,11 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.save (\"../outputs/segmented_tomogram\", segmented_tomogram)"
@@ -326,27 +264,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Hint:\n",
     "\n",
-    "For 3D reconstruction, the numpy output of the previous cell suffices.\n",
+    "For 3D reconstruction, the numpy file created by the previous cell suffices.\n",
     "\n",
-    "You can additionally save the segmented output as a TIFF file to use with software such as ImageJ:"
+    "You can additionally save the segmented output as a TIFF file to use with software such as **ImageJ**:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tifffile.imwrite(\"../outputs/segmented_tomogram.tiff\",\n",
@@ -357,11 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
