--- a/notebooks/tomogram_2D_segmentation.ipynb
+++ b/notebooks/tomogram_2D_segmentation.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../saved_models/model_config_semisupervised_2021_05.json', 'r') as config_file:\n",
+    "with open('../network_params/model_config_semisupervised_2021_05.json', 'r') as config_file:\n",
     "    model_config = json.load(config_file)"
    ]
   },
@@ -102,10 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not glob.glob(\"../saved_models/*.h5\"):\n",
+    "if not glob.glob(\"../network_params/*.h5\"):\n",
     "    print(\"Downloading network weights...\")\n",
     "    urllib.request.urlretrieve('ftp://ftp.mi.fu-berlin.de/pub/cmb-data/deep_sxt/weights_semisupervised_2021_05.h5',\n",
-    "                       '../saved_models/weights_semisupervised_2021_05.h5')"
+    "                       '../network_params/weights_semisupervised_2021_05.h5')"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights('../saved_models/weights_semisupervised_2021_05.h5')"
+    "model.load_weights('../network_params/weights_semisupervised_2021_05.h5')"
    ]
   },
   {
