--- a/notebooks/tomogram_2D_segmentation.ipynb
+++ b/notebooks/tomogram_2D_segmentation.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models import double_decoder_cnn\n",
-    "from data_loader.image_loader import image_preprocessing_function\n",
-    "from inference.tomogram_segmentation import load_tomogram_from_file, segment_slice"
+    "from deep_sxt.models import double_decoder_cnn\n",
+    "from deep_sxt.data_loader.image_loader import image_preprocessing_function\n",
+    "from deep_sxt.inference.tomogram_segmentation import load_tomogram_from_file, segment_slice"
    ]
   },
   {
@@ -205,12 +205,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chunk_size = 600\n",
+    "stride = 400\n",
+    "\n",
     "segmented_tomogram = []\n",
     "\n",
     "for _slice in tqdm(sel_slices):\n",
     "    \n",
     "    output = segment_slice(model, image_preprocessing_function(_slice),\n",
-    "                           chunk_size=np.amin([600, *_slice.shape]), stride=400)\n",
+    "                           chunk_size=np.amin([chunk_size, *_slice.shape]), stride=stride)\n",
     "    \n",
     "    segmented_slice = (output > 0.0).astype(np.float32)\n",
     "    \n",
@@ -308,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
