--- a/notebooks/tomogram_3D_reconstruction.ipynb
+++ b/notebooks/tomogram_3D_reconstruction.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from inference.tomogram_reconstruction import z_smooth, surface_reconstruction"
+    "from deep_sxt.inference.tomogram_reconstruction import z_smooth, surface_reconstruction"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "source": [
     "## Exporting the reconstructed tomogram\n",
     "\n",
-    "Using the following command, you can save the mesh output of the surface reconstruction process into a variety of formats offered by the PyVista package. You can refer to the online PyVista documentation (https://docs.pyvista.org) for further information. "
+    "Using the following command, you can save the mesh output of the surface reconstruction process into a variety of formats offered by the PyVista package. The file format is automatically decided based on the file extension you use in the ```save_meshio``` method. You can refer to the online PyVista documentation (https://docs.pyvista.org) for further information. "
    ]
   },
   {
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
