--- a/notebooks/tomogram_2D_segmentation.ipynb
+++ b/notebooks/tomogram_2D_segmentation.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking TensorFlow installation and GPU access"
+    "## Checking TensorFlow installation and GPU availability"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "source": [
     "if not glob.glob(\"../network_params/*.h5\"):\n",
     "    print(\"Downloading network weights...\")\n",
-    "    urllib.request.urlretrieve('ftp://ftp.mi.fu-berlin.de/pub/cmb-data/deep_sxt/weights_semisupervised_2021_05.h5',\n",
+    "    urllib.request.urlretrieve('https://ftp.mi.fu-berlin.de/pub/cmb-data/deep_sxt/weights_semisupervised_2021_05.h5',\n",
     "                       '../network_params/weights_semisupervised_2021_05.h5')"
    ]
   },
