mesh splitting added

--- a/notebooks/tomogram_3D_reconstruction.ipynb
+++ b/notebooks/tomogram_3D_reconstruction.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from deep_sxt.inference.tomogram_reconstruction import z_smooth, surface_reconstruction"
+    "from deep_sxt.inference.tomogram_reconstruction import z_smooth, surface_reconstruction\n",
+    "from deep_sxt.inference.tomogram_reconstruction import surface_reconstruction_with_split"
    ]
   },
   {
@@ -17,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyvista as pv"
+    "import pyvista as pv\n",
+    "from matplotlib import cm\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -122,7 +125,20 @@
     "\n",
     "    cam_viewup = (-np.cos(theta) * np.cos(phi), -np.cos(theta) * np.sin(phi), np.sin(theta))\n",
     "    \n",
-    "    return cam_pos, cam_viewup    "
+    "    return cam_pos, cam_viewup\n",
+    "\n",
+    "def fix_plotter_settings(plotter):\n",
+    "    \n",
+    "    _center = np.array([0.5 * x_max, 0.5 * y_max, 0.5 * z_max])\n",
+    "\n",
+    "    cam_pos, cam_viewup = get_cam_position(2.4 * x_max, 65.0 * np.pi / 180.0, -20.0 * np.pi / 180.0)\n",
+    "\n",
+    "    plotter.set_position(cam_pos)\n",
+    "    plotter.set_focus(_center)\n",
+    "    plotter.set_viewup(cam_viewup)\n",
+    "\n",
+    "    plotter.show_grid()\n",
+    "    plotter.show_axes()"
    ]
   },
   {
@@ -137,16 +153,7 @@
     "\n",
     "plotter.set_background([0.1, 0.1, 0.1])\n",
     "\n",
-    "_center = np.array([0.5 * x_max, 0.5 * y_max, 0.5 * z_max])\n",
-    "\n",
-    "cam_pos, cam_viewup = get_cam_position(2.4 * x_max, 65.0 * np.pi / 180.0, -20.0 * np.pi / 180.0)\n",
-    "\n",
-    "plotter.set_position(cam_pos)\n",
-    "plotter.set_focus(_center)\n",
-    "plotter.set_viewup(cam_viewup)\n",
-    "\n",
-    "plotter.show_grid()\n",
-    "plotter.show_axes()\n",
+    "fix_plotter_settings(plotter)\n",
     "\n",
     "plotter.show()"
    ]
@@ -167,6 +174,49 @@
    "outputs": [],
    "source": [
     "pv.save_meshio(\"../outputs/reconstructed_tomogram.obj\", mesh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the reconstructed tomograph with split geometries\n",
+    "\n",
+    "Using the following cell, surface reconstruction is followed by a splitting of the tomogram into separate surfaces that can be independently visualized.\n",
+    "\n",
+    "```min_number_of_faces``` controls a filter which removes small geometries with number of faces less than this number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh_array = surface_reconstruction_with_split(smoothed_slices, min_number_of_faces=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotter = pv.Plotter(notebook=True, off_screen=True, multi_samples=2, polygon_smoothing=True)\n",
+    "plotter.set_background([0.1, 0.1, 0.1])\n",
+    "\n",
+    "color_map = cm.get_cmap ('tab20c')\n",
+    "\n",
+    "for _mesh in tqdm(mesh_array):\n",
+    "\n",
+    "    _color = color_map(np.random.random_sample())[:3]\n",
+    "    \n",
+    "    plotter.add_mesh(_mesh, color=_color, smooth_shading=True)\n",
+    "\n",
+    "\n",
+    "fix_plotter_settings(plotter)\n",
+    "\n",
+    "plotter.show()"
    ]
   },
   {
@@ -193,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
